powernap (1.2) unreleased; urgency=low

  * config, debian/control, powernap.1, powernap.py: lower the default
    polling period from 10 seconds to 1 second; polling /proc is cheap,
    and empirical testing has shown a negligible performance impact

 -- Dustin Kirkland <kirkland@ubuntu.com>  Fri, 19 Jun 2009 11:25:49 -0500

powernap (1.1-0ubuntu1) karmic; urgency=low

  * debian/copyright: updated for Ubuntu inclusion

 -- Dustin Kirkland <kirkland@ubuntu.com>  Fri, 12 Jun 2009 12:53:54 -0500

powernap (1.0-0ubuntu1) karmic; urgency=low

  [ Initial release ]
  * powernap: shell wrapper script
  * powernap.py: python daemon
  * config: global configuration file
  * powernap.1: manpage documentation

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 11 Jun 2009 17:30:16 -0500