@@ -1,6 +1,7 @@
-#!/bin/sh
+#!/usr/bin/python
 #
-#    powernap wrapper for backgrounding the python daemon
+#    powernap - monitor a system process table; if IDLE amount of time
+#               goes by with no MONITORED_PROCESSES running, run ACTION
 #    Copyright (C) 2009 Canonical Ltd.
 #
 #    Authors: Dustin Kirkland <kirkland@canonical.com>
@@ -17,27 +18,167 @@
 #    You should have received a copy of the GNU General Public License
 #    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-PKG="powernap"
+# Imports
+import commands
+import os
+import re
+import signal
+import sys
+import time
 
-# Default to background running, allow foreground override
-FOREGROUND=0
-for arg in $@; do
-	case $arg in
-		-f|--foreground)
-			FOREGROUND=1
-		;;
-		*)
-			echo "Invalid argument"
-			exit 1
-		;;
-	esac
-done
+# Define globals
+global PKG, LOCK, CONFIG
+PKG = "powernap"
+LOCK = "/var/run/%s.pid" % PKG
+CONFIG = "/etc/%s/config" % PKG
 
-if [ "$FOREGROUND" = "1" ]; then
-	# Run in foreground
-	exec /usr/lib/$PKG/$PKG.py
-else
-	# Run in background
-	# TODO: Setup some logging to /var/log/$PKG?
-	exec /usr/lib/$PKG/$PKG.py >/dev/null &2>1 &
-fi
+# CONFIG values should override these (default: monitor no processes)
+global INTERVAL_SECONDS, MONITORED_PROCESSES, ACTION, ABSENT_SECONDS, DEBUG
+MONITORED_PROCESSES = []
+ABSENT_SECONDS = sys.maxint
+ACTION = ""
+INTERVAL_SECONDS = 1
+DEBUG = 0
+
+# Generic error function
+def error(msg):
+    print("ERROR: %s" % msg)
+    sys.exit(1)
+
+# Load configuration file
+try:
+    execfile(CONFIG)
+except:
+    error("Invalid configuration [%s]" % CONFIG)
+
+# Define Process object to hold regex and absence counter
+class Process(object):
+    def __init__(self, process):
+        self.process = process
+        self.regex = re.compile(process)
+        self.absent_seconds = 0
+
+# Generic debug function
+def debug(msg):
+    if DEBUG:
+        print("DEBUG: %s" % msg)
+
+# Lock function, using a pidfile in /var/run
+def establish_lock(lock):
+    if os.path.exists(lock):
+        f = open(lock,'r')
+        pid = f.read()
+        f.close()
+        error("Another instance is running [%s]" % pid)
+    else:
+        try:
+            f = open(LOCK,'w')
+        except:
+            error("Administrative privileges are required to run %s" % PKG);
+        f.write(str(os.getpid()))
+        f.close()
+        # Set signal handlers
+        signal.signal(signal.SIGHUP, signal_handler)
+        signal.signal(signal.SIGINT, signal_handler)
+        signal.signal(signal.SIGQUIT, signal_handler)
+        signal.signal(signal.SIGTERM, signal_handler)
+        signal.signal(signal.SIGUSR1, take_action)
+
+# Clean up lock file on termination signals
+def signal_handler(signal, frame):
+    if os.path.exists(LOCK):
+        os.remove(LOCK)
+    sys.exit(1)
+
+# Search process list for regex, return on first match
+def find_process(ps, p):
+    for str in ps:
+        if p.search(str):
+            return 1
+    return 0
+
+# TODO: notify authorities about action taken
+def notify_authorities(action):
+    debug("Taking action [%s], email authorities" % action)
+
+def take_action(processes, action):
+    # All processes are absent, take action!
+    notify_authorities(action)
+    for p in processes:
+        p.absent_seconds = 0
+    os.system(action)
+
+# Main loop, search process table, increment counters, take actions, sleep
+def powernap_loop(processes, absent_seconds, action, interval_seconds):
+    debug("Starting %s, sleeping [%d] seconds" % (PKG, interval_seconds))
+    while 1:
+        time.sleep(interval_seconds)
+        # Examine process table, compute absent time of each monitored process
+        debug("Examining process table")
+        absent_processes = 0
+        ps = commands.getoutput("ps -eo args").splitlines()
+        for p in processes:
+            debug("  Looking for [%s]" % p.process)
+            if find_process(ps, p.regex):
+                # process running, so reset absent time
+                p.absent_seconds = 0
+                debug("    Process found, reset absent time [%d/%d]" % (p.absent_seconds, absent_seconds))
+            else:
+                # process not running, increment absent time
+                p.absent_seconds += interval_seconds
+                debug("    Process not found, increment absent time [%d/%d]" % (p.absent_seconds, absent_seconds))
+                if p.absent_seconds >= absent_seconds:
+                    # process missing for >= absent_seconds threshold, mark absent
+                    debug("    Process absent for >= threshold, so mark absent")
+                    absent_processes += 1
+        # Determine if action needs to be taken
+        if absent_processes > 0 and absent_processes == len(processes):
+            # All processes are absent, take action!
+            take_action(processes, action)
+        debug("Done with powernap_loop, sleeping [%d] seconds" % interval_seconds)
+
+
+# "Forking a Daemon Process on Unix" from The Python Cookbook
+def daemonize (stdin="/dev/null", stdout="/var/log/%s.log" % PKG, stderr="/var/log/%s.err" % PKG):
+    try:
+        pid = os.fork( )
+        if pid > 0:
+            sys.exit(0)
+    except OSError, e:
+        sys.stderr.write("fork #1 failed: (%d) %sn" % (e.errno, e.strerror))
+        sys.exit(1)
+    os.chdir("/")
+    os.umask(0)
+    os.setsid( )
+    try:
+        pid = os.fork( )
+        if pid > 0:
+            sys.exit(0)
+    except OSError, e:
+        sys.stderr.write("fork #2 failed: (%d) %sn" % (e.errno, e.strerror))
+        sys.exit(1)
+    f = open(LOCK,'w')
+    f.write(str(os.getpid()))
+    f.close()
+    for f in sys.stdout, sys.stderr: f.flush( )
+    si = file(stdin, 'r')
+    so = file(stdout, 'a+')
+    se = file(stderr, 'a+', 0)
+    os.dup2(si.fileno( ), sys.stdin.fileno( ))
+    os.dup2(so.fileno( ), sys.stdout.fileno( ))
+    os.dup2(se.fileno( ), sys.stderr.fileno( ))
+
+
+# Main program
+if __name__ == '__main__':
+    # Ensure that only one instance runs
+    establish_lock(LOCK)
+    daemonize()
+    try:
+        # Run the main powernap loop
+        processes = [Process(p) for p in MONITORED_PROCESSES]
+        powernap_loop(processes, ABSENT_SECONDS, ACTION, INTERVAL_SECONDS)
+    finally:
+        # Clean up the lock file
+        if os.path.exists(LOCK):
+            os.remove(LOCK)
